--- a/main.css
+++ b/main.css
@@ -1,13 +1,10 @@
 /* referenced https://www.w3schools.com/howto/howto_css_images_side_by_side.asp for side-by-side imgs */
 
-.column {
-    float: left;
-    width: 50%;
-    padding: 5px;
+.row {
+    display: flex;
   }
   
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
+  .column {
+    flex: 50%;
+    padding: 5px;
   }
