--- a/main.css
+++ b/main.css
@@ -2,9 +2,19 @@
 
 .row {
     display: flex;
-  }
+}
   
-  .column {
-    flex: 40%;
+.column {
+    flex: 50%;
     padding: 5px;
-  }
+}
+
+img {
+    width: 80%;
+    height: auto;
+}
+
+.main_block {
+    font-family: Papyrus, Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
