--- a/main.css
+++ b/main.css
@@ -9,12 +9,25 @@
     padding: 5px;
 }
 
-img {
-    width: 80%;
+.img {
+    width: 50%;
     height: auto;
 }
 
 .main_block {
     font-family: Papyrus, Arial, Helvetica, sans-serif;
     font-size: 14px;
+}
+
+.table, .th, .td {
+    border: 1px solid black;
+}
+
+.table.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.body {
+    background-color: yellow;
 }
